# bd-perf-dashboard

./: README.md  docker-compose.yaml  pyproject.toml
connector/: app.py  cache.py  config.py  dependencies.py  main.py  models.py  odoo_client.py
connector/routes/: __init__.py  dashboard.py  health.py  leads.py  meetings.py  salesteams.py  stages.py
custom-addons/code_backend_theme/static/src/js/web_navbar_appmenu/: webNavbarAppMenu.js
custom-addons/code_backend_theme/static/src/scss/: login.scss  sidebar.scss  theme.scss  theme_accent.scss
custom-addons/code_backend_theme/static/src/xml/: top_bar_templates.xml
scripts/: generate_dummy_data.py
setup/: entrypoint.sh  setup_odoo.py
