[project]
name = "bd-perf-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.16"
dependencies = [
    "argparse>=1.4.0",
    "babel>=2.17.0",
    "faker",
    "fastapi>=0.115.12",
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "pytz>=2025.2",
    "uvicorn>=0.34.2",
]
